--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
       font-family: 'Kalpurush';
       src: url('kalpurush.ttf') format('truetype');
     }
-
     body {
       font-family: Arial, sans-serif;
       line-height: 1.6;
@@ -17,40 +16,33 @@
       margin: 0;
       padding: 0;
     }
-
     header {
       background: #0e4eb8;
       color: #fff;
       padding: 40px 20px;
       text-align: center;
     }
-
     header img {
       width: 120px;
       border-radius: 50%;
       margin-top: 20px;
     }
-
     section {
       padding: 30px 20px;
       max-width: 900px;
       margin: 20px auto 0 auto;
       background: #fff;
     }
-
     h2 {
       color: #0e4eb8;
     }
-
     ul {
       padding-left: 20px;
     }
-
     .contact a {
       color: #0e4eb8;
       text-decoration: none;
     }
-
     footer {
       background: #0e4eb8;
       color: #fff;
@@ -58,7 +50,6 @@
       padding: 20px;
       margin-top: 40px;
     }
-
     .bangla {
       font-family: 'Kalpurush', sans-serif;
     }
@@ -131,6 +122,67 @@
   <footer>
     <p>&copy; 2025 MD. Hamidul Islam | All Rights Reserved</p>
   </footer>
+
+
+<section id="featured-poems" class="bangla">
+  <h2>📜 নির্বাচিত কবিতা</h2>
+
+  <article style="margin-bottom: 30px;">
+    <h3>১. ঠিক সন্ধ্যা নামার আগে</h3>
+    <p>
+      ঠিক সন্ধ্যা নামার আগে,<br>
+      সে চলে গেল চুপিসারে—<br>
+      আমি অপেক্ষায়, শব্দহীন দৃষ্টিপাতে,<br>
+      চিঠির খামে জমে থাকা অশ্রুর মতো!
+    </p>
+    <p><em>— এক নিঃশব্দ প্রস্থান, রয়ে যাওয়া শুধু বিষাদ</em></p>
+  </article>
+
+  <article style="margin-bottom: 30px;">
+    <h3>২. চিঠি আসেনি</h3>
+    <p>
+      প্রতিদিন লিখেছি একটি করে চিঠি,<br>
+      পাঠাইনি কোনোটাই, শুধু রেখেছি ক্যালেন্ডারে।<br>
+      ১৬ বছর পেরিয়ে গেছে,<br>
+      তবু "প্রিয়" সম্বোধনে ভিজে আছে পাতাগুলো。
+    </p>
+    <p><em>— একতরফা ভালোবাসার ধুলাঝরা দলিল</em></p>
+  </article>
+
+  <article style="margin-bottom: 30px;">
+    <h3>৩. কালপুরুষ</h3>
+    <p>
+      রাতের আকাশে ঝলসানো তারা,<br>
+      জানে সে কবে ফিরবে না আর।<br>
+      আমি তাকে বলেছিলাম,<br>
+      “তোমার চলে যাওয়া মানে কি সব শেষ?”<br>
+      উত্তর আসেনি—কালপুরুষ চুপ করে থেকেছে।
+    </p>
+    <p><em>— প্রেমের মৃত্যু নাকি জন্ম?</em></p>
+  </article>
+
+  <article style="margin-bottom: 30px;">
+    <h3>৪. প্রতীক্ষার সংলাপ</h3>
+    <p>
+      অপেক্ষা বলেছিল, "আমি ক্লান্ত"<br>
+      আমি বলেছিলাম, "তবুও দাঁড়িয়ে আছি"<br>
+      সে বলেছিল, "যে আসবে না, তার জন্য?"<br>
+      আমি বলেছিলাম, "হ্যাঁ, শুধু তার জন্যই..."
+    </p>
+    <p><em>— প্রতীক্ষা কখনো হেরে যায় না, হার মানে হৃদয়</em></p>
+  </article>
+
+  <article>
+    <h3>৫. তাকে বলা হয়নি</h3>
+    <p>
+      ভালোবাসি— কথাটি বলা হয়নি কখনোই,<br>
+      অথচ প্রতিটি সকাল-সন্ধ্যায়<br>
+      চোখে ছিল তার ছবি, আর হৃদয়ে কেবল সে...<br>
+      সে বুঝেছিল কি না জানি না।
+    </p>
+    <p><em>— কিছু অনুভব শব্দের অপেক্ষা করে না</em></p>
+  </article>
+</section>
 
 </body>
 </html>
