--- a/index.html
+++ b/index.html
@@ -184,5 +184,19 @@
   </article>
 </section>
 
+
+<div style="text-align: center; margin-top: 20px;">
+  <a href="downloads/PoetryBook_Kamanar_Gitibitan.pdf" download style="
+      background-color: #007BFF;
+      color: white;
+      padding: 10px 20px;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: bold;
+  ">
+    📕 Download Poetry Book (PDF)
+  </a>
+</div>
+
 </body>
 </html>
